--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,7 +131,7 @@ body {
     background: linear-gradient(rgba(245, 202, 195, 0.8), rgba(132, 165, 157, 0.8)), url('../images/hero-image.jpeg') no-repeat center/cover;
     color: #333;
     background-position: center;
-    background-size: cover; /* Changed to cover for better responsiveness */
+    background-size: cover; 
     animation: fadeIn 1.5s ease-in-out;
     position: relative;
 }
@@ -503,13 +503,13 @@ body {
 
 @media (max-width: 1024px) {
     .feature-card {
-        flex: 1 1 calc(50% - 20px); /* Adjust for two cards in a row */
+        flex: 1 1 calc(50% - 20px); 
     }
 }
 
 @media (max-width: 768px) {
     .feature-card {
-        flex: 1 1 100%; /* Full-width cards on smaller devices */
+        flex: 1 1 100%; 
         max-width: 100%;
     }
 
@@ -583,7 +583,7 @@ body {
 
 @media (max-width: 1024px) {
     .testimonial {
-        flex: 1 1 calc(50% - 20px); /* Two testimonials in a row for tablets */
+        flex: 1 1 calc(50% - 20px); 
     }
 
     .testimonials h2 {
@@ -593,7 +593,7 @@ body {
 
 @media (max-width: 768px) {
     .testimonial {
-        flex: 1 1 100%; /* Full-width testimonials for smaller devices */
+        flex: 1 1 100%; 
         max-width: 100%;
     }
 
@@ -703,7 +703,7 @@ body {
     }
 
     .service-card {
-        width: calc(50% - 20px); /* Two cards per row */
+        width: calc(50% - 20px); 
     }
 }
 
@@ -713,7 +713,7 @@ body {
     }
 
     .service-card {
-        width: calc(100% - 20px); /* Single card per row */
+        width: calc(100% - 20px); 
     }
 
     .service-info h3 {
@@ -737,7 +737,7 @@ body {
     }
 
     .service-card {
-        width: 100%; /* Full-width cards */
+        width: 100%; 
     }
 
     .service-info h3 {
